--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                              Remplacez src="./img1.jpg" par le nom de votre première image 
                              (ex: src="./maphoto.jpg") ou renommez votre image "img1.jpg" 
                         -->
-                        <img src="./img1.jpg" onerror="this.style.display='none'" alt="Nous 1">
+                        <img src="./img2.jpeg" onerror="this.style.display='none'" alt="Nous 1">
                         <span style="font-size:12px; position:absolute;">Toi & Moi</span>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
                 <div class="photo-frame">
                     <div class="photo-placeholder">
                         <!-- INSTRUCTION PHOTO 2 -->
-                        <img src="./img2.jpg" onerror="this.style.display='none'" alt="Nous 2">
+                        <img src="./img1.JPG" onerror="this.style.display='none'" alt="Nous 2">
                         <span>❤️</span>
                     </div>
                 </div>
@@ -383,7 +383,7 @@
                 <div class="photo-frame">
                     <div class="photo-placeholder">
                         <!-- INSTRUCTION PHOTO 3 -->
-                        <img src="./img3.jpg" onerror="this.style.display='none'" alt="Nous 3">
+                        <img src="./img3.jpeg" onerror="this.style.display='none'" alt="Nous 3">
                         <span style="font-size:12px; position:absolute;">Souvenirs</span>
                     </div>
                 </div>
